<resources>
    <string name="app_name">MapFriends</string>
    <string name="svBtnMap">Karta</string>
    <string name="enBtnMap">Map</string>
    <string name="svBtnChat">Gruppchatt</string>
    <string name="enBtnChat">Group chat</string>
    <string name="svBtnManage">Hantera grupper</string>
    <string name="enBtnManage">Manage groups</string>
    <string name="enCreateBtn">Create</string>
    <string name="svCreateBtn">Skapa</string>
    <string name="enBtnDeReg">Deregister</string>
    <string name="svBtnDeReg">Avregistrera</string>


    <string name="menu_settings">Manage groups</string>
    <string name="enCurrentGrp">Current group</string>
    <string name="svCurrentGrp">Befintlig grupp: </string>
    <string name="enCreateGrp">Create a group</string>
    <string name="svCreateGrp">Skapa en grupp </string>
    <string name="enGroupName">Group name</string>
    <string name="scGroupName">Gruppnamn</string>

    <string name="enCurrentGrpNone">None</string>
    <string name="svCurrentGrpNone">Ingen</string>
    <string name="enAvailableGrps">Available groups</string>
    <string name="svAvailableGrps">Tillgängliga grupper</string>
    <string name="enRegisteredInGrp">Registered users: </string>
    <string name="svRegisteredInGrp">Registrerade användare: </string>
    <string name="enSettingsLanguage">Language</string>
    <string name="svSettingsLanguage">Språk</string>
    <string name="enEnglish">English</string>
    <string name="svEnglish">Engelska</string>
    <string name="enSwedish">Swedish</string>
    <string name="svSwedish">Svenska</string>
    <string name="enSettingsUsername">Username</string>
    <string name="svSettingsUsername">Användarnamn</string>
    <string name="enBtnSettingsApply">Apply</string>
    <string name="svBtnSettingsApply">Applicera</string>


    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
